Added gameDOMController.changeInitButtonState() API

--- a/css/newui.css
+++ b/css/newui.css
@@ -70,7 +70,7 @@ body {
     margin: 0rem 0.5rem;
 }
 
-#game-select-speed {
+#game-button-select-speed {
     font-weight: bold;
 }
 
@@ -93,7 +93,7 @@ body {
 }
 
 #game-scoreboard::before {
-    content: "Score:";
+    content: "Score: ";
 }
 
 #dev-message {
